<resources>
    <string name="app_name">Ucznik</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Hasło</string>
    <string name="register_hint">Nie masz konta? <u>Zarejestruj się</u></string>
    <string name="login_button">Zaloguj</string>
    <string name="register">Rejestracja</string>
    <string name="empty_email_error">Email jest pusty</string>
    <string name="not_email_error">Nieporawny adres email</string>
    <string name="empty_password_error">Hasło jest puste</string>
    <string name="hint_password_repeat">Powtórz hasło</string>
    <string name="logo_desc">Logo aplikacji</string>
    <string name="register_btn">Zarejestruj</string>
    <string name="passwords_not_match_error">Podane hasła się różnią</string>
    <string name="preference_file_key">ucznik_shared_prefs</string>
    <string name="saved_user_id">user_id</string>
    <string name="topics">Tematy</string>
    <string name="marked_done_desc">Temat zakończony</string>
    <string name="logout_menu">Wyloguj</string>
    <string name="like_an_ico"><![CDATA[&#8942;]]></string>
    <string name="delete_topic">Usuń</string>
    <string name="rename_topic">Nazwa</string>
    <string name="mark_done">Oznacz jako wykonane</string>
    <string name="mark_undone">Oznacz jako niewykonane</string>
    <string name="topic_options_desc">Opcje tematu</string>
    <string name="save">zapisz</string>
    <string name="cancel">anuluj</string>
    <string name="new_topic">Nowy temat</string>
    <string name="learn_menu">Ucz się!</string>
    <string name="search_question_menu">Szukaj</string>
    <string name="question_done_mark_desc">Oznaczenie zakończenia pytania</string>
    <string name="questions_done">Nauczono</string>
    <string name="deleted">Usunięto</string>
    <string name="rename">Zmień nazwę</string>
    <string name="question">Pytanie</string>
    <string name="answer">Odpowiedź</string>
    <string name="empty_data_error">Podane dane są niekompletne</string>
    <string name="dont_know_question">Nie umiem</string>
    <string name="know_question">umiem</string>
    <string name="done_learning">Gratuluacje! Nauka zakończona</string>
    <string name="already_learned">Nie ma niczego do nauki!</string>
    <string name="question_mark_desc">Znak zapytania</string>
    <string name="photo_answer_desc">odpowiedź w formie zdjęcia</string>
    <string name="reset_menu">reset</string>
</resources>
