<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ucznik.view.activities.LearnActivity">

    <Button
        android:id="@+id/btn_no"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/round_button_red"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_red"
        android:text="@string/dont_know_question"
        app:layout_constraintBottom_toBottomOf="@+id/btn_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_yes" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/learnQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/learnStatus"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae ultrices ligula. Aliquam ac orci tortor. Nunc mattis enim ultrices erat commodo commodo. Vivamus in mauris id lectus finibus auctor id quis nisi. Sed pulvinar justo vel ligula dapibus, quis maximus dui tempor. Aenean efficitur pharetra dolor, et mattis tortor ornare eget. Etiam non libero accumsan mi interdum bibendum id et metus. Nullam dolor risus, rhoncus ac pharetra eget, blandit vulputate neque." />


    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/btn_yes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_button_green"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_green"
        android:text="@string/know_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/learnStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_yes"
        app:layout_constraintEnd_toStartOf="@+id/btn_yes"
        app:layout_constraintStart_toEndOf="@+id/btn_no"
        app:layout_constraintTop_toTopOf="@+id/btn_yes"
        tools:text="1/3" />

    <ImageView
        android:id="@+id/questionMark"
        android:layout_width="179dp"
        android:layout_height="188dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/question_mark_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_question_mark" />

    <ImageView
        android:id="@+id/photoAnswer"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learnAnswer" />

    <TextView
        android:id="@+id/learnAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:maxLines="20"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />


</android.support.constraint.ConstraintLayout>



